src/objects/Apttus_Config2__ProductConstraint__c.object
<CustomObject>
    <description>Represents a set of constraints a product must satisfy before it can be added to the product configuration.</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the constraint is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContextType__c</fullName>
        <description>The type of context associated with the constraint</description>
        <label>Context Type (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>Product Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the product constraint</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The constraint effective date. The constraint becomes effective on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The constraint expiration date. The constraint becomes ineffective after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxProducts__c</fullName>
        <description>The maximum number of products that may be selected from the related products. Setting the maximum products constrains the number of related products the user can select. Setting the maximum products to 0, means the user cannot select any product from the related products. This creates an &quot;exclusion&quot; rule.</description>
        <label>Max Products (Deprecated)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxQuantity__c</fullName>
        <description>The maximum quantity of the product that may be selected.</description>
        <label>Max Quantity (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Message__c</fullName>
        <description>The message to display to the user when the constraint is violated</description>
        <label>Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinProducts__c</fullName>
        <description>The minimum number of products that must be selected from the related products. Setting the minimum products to greater than 0 means the user is required to select a product from the related products. This creates an &quot;inclusion&quot; rule. Setting the minimum products to 0 means the user is not required to make a selection.</description>
        <label>Min Products (Deprecated)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinQuantity__c</fullName>
        <description>The minimum quantity of the product that must be selected.</description>
        <label>Min Quantity (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCategory__c</fullName>
        <description>The product category associated with the constraint</description>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>The product family associated with the constraint</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product group associated with the constraint.</description>
        <label>Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Product Constraints</relationshipLabel>
        <relationshipName>ProductConstraints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated product</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Constraints</relationshipLabel>
        <relationshipName>ProductConstraints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The constraint evaluation sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Constraint</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Constraint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Constraints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>